@@ -1,3 +1,7 @@
+Travel::Status::DE::DBRIS 0.16 - Sat Nov 15 2025
+
+    * Formation::Group: Add ICE L and LINT 41; fix CFL KISS detection
+
 Travel::Status::DE::DBRIS 0.15 - Sun Oct 26 2025
 
     * DBRIS: Add optional "failure_cache" key to new / new_p. This causes
